--- a/homepage.html
+++ b/homepage.html
@@ -200,7 +200,7 @@
             <button class='btn btn-primary align-center bg-dark border-dark ml-2 mb-2' id="album-loader2"  style="width:120px; height: 60px;" >Display albums</button>
           </div>
          <div class="col-12 mr-5">
-          <p>Podcasts we think you'll get hooked on.</p>
+          
          </div>
       </div>
       <div class="row" id = 'shows-to-try'>
@@ -211,57 +211,11 @@
      <div class="row headline__section">
        <div class="col-12 mt-5">
          <h3>The Best of 2020</h3>
+         <button class='btn btn-primary align-center bg-dark border-dark ml-2 mb-2' id="album-loader2"  style="width:120px; height: 60px;" >Display albums</button>
        </div>
      </div>
-     <div class="row">
-       <div class="card col-sm-6 col-md-2 px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/medians.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-           <p><strong>Median</strong><span><br>Cradle of Filth</span></p>
-         </div>
-         </div>
-       </div>
-       <div class="card col-sm-6 col-md-2  px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/metal-ballads.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-           <p><strong>Metal Ballads</strong><span>By Spotify</span></p>
-         </div>
-         </div>
-       </div>
-       <div class="card col-sm-6 col-md-2  px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/mindfullness.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-           <p><strong>Burning Jazz-rock...</strong><br><span>fiery, modern,groovy,jazz..</span></p>
-         </div>
-         </div>
-       </div>
-       <div class="card col-sm-6 col-md-2  px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/nymphetamine.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-           <p><strong>Burning Jazz-rock...</strong><br><span>fiery, modern,groovy,jazz..</span></p>
-         </div>
-         </div>
-       </div>
-       <div class="card col-md-2  px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/post-human.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-           <p><strong>Burning Jazz-rock...</strong><br><span>fiery, modern,groovy,jazz..</span></p>
-         </div>
-         </div>
-       </div>
-       <div class="card col-sm-6 col-md-2  px-2 py-2">
-         <img class="card__image" src="covers/Recently-played/power-pizza.jpg" />
-         <div class="card__body">
-         <div class="card__meta">
-            <p><strong>De Keiharde Podc...</strong><br><span>NPO Radio2</span></p>
-          </div>
-          </div>
-       </div>
+     <div class="row" id = "album-loader3">
+       
      </div>
    </div>
  </div> 
