--- a/album.html
+++ b/album.html
@@ -137,7 +137,7 @@
                 <small>ALBUM</small>
             </div>
             <div>
-               <h2> Bohemain Rhapsody(The Original Soundtrack)</h2>
+               <h2> Bohemian Rhapsody(The Original Soundtrack)</h2>
             </div>
             <div class="">
               <p> <small> <strong>
