--- a/homepage.html
+++ b/homepage.html
@@ -214,7 +214,7 @@
          <button class='btn btn-primary align-center bg-dark border-dark ml-2 mb-2' id="album-loader2"  style="width:120px; height: 60px;" >Display albums</button>
        </div>
      </div>
-     <div class="row" id = "album-loader3">
+     <div class="row" id = "best-of-2020">
        
      </div>
    </div>
